// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aggregator styles should render and match snapshot when open 1`] = `
HTMLCollection [
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  height: auto;
  width: calc(100% - (2 * 16px));
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #CCC;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  font: inherit;
  background: none;
  border: 0;
  outline: none;
}

.circuit-0:hover,
.circuit-0:focus {
  color: #F5F5F5;
}

.circuit-1 {
  display: block;
  margin-left: 12px;
}

.circuit-2 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  height: calc(32px * 1);
  position: relative;
  opacity: 1;
  visibility: inherit;
  -webkit-transition: height 120ms ease-in-out,opacity 120ms ease-in-out 100ms,visibility 120ms ease-in-out 100ms;
  transition: height 120ms ease-in-out,opacity 120ms ease-in-out 100ms,visibility 120ms ease-in-out 100ms;
}

.circuit-2::before {
  content: '';
  width: 2px;
  background: #999;
  height: calc(32px * 1);
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul>
    <li>
      <button
        aria-disabled="false"
        class="circuit-0"
        data-testid="aggregator"
      >
        <svg
          id="default-icon"
        />
        <span
          class="circuit-1"
        >
          Aggregator
        </span>
      </button>
      <ul
        class="circuit-2"
      >
        <div
          data-testid="child"
        >
          child
        </div>
      </ul>
    </li>
  </ul>,
]
`;

exports[`Aggregator styles should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  height: auto;
  width: calc(100% - (2 * 16px));
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #CCC;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  font: inherit;
  background: none;
  border: 0;
  outline: none;
}

.circuit-0:hover,
.circuit-0:focus {
  color: #F5F5F5;
}

.circuit-1 {
  display: block;
  margin-left: 12px;
}

.circuit-2 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
}

.circuit-2::before {
  content: '';
  width: 2px;
  background: #999;
  height: calc(32px * 1);
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul>
  <li>
    <button
      aria-disabled="false"
      class="circuit-0"
      data-testid="aggregator"
    >
      <svg
        id="default-icon"
      />
      <span
        class="circuit-1"
      >
        Aggregator
      </span>
    </button>
    <ul
      class="circuit-2"
    >
      <div
        data-testid="child"
      >
        child
      </div>
    </ul>
  </li>
</ul>
`;

exports[`Aggregator styles should render with disabled state styles and match the snapshot 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  height: auto;
  width: calc(100% - (2 * 16px));
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #CCC;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  font: inherit;
  background: none;
  border: 0;
  outline: none;
  cursor: not-allowed;
  color: #999;
}

.circuit-1 {
  display: block;
  margin-left: 12px;
}

<ul>
  <li>
    <button
      aria-disabled="true"
      class="circuit-0"
      data-testid="aggregator"
      disabled=""
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 9V7.207a6.137 6.137 0 0 0-5.214-6.156A6.006 6.006 0 0 0 6 7v2a2.006 2.006 0 0 0-2 2v9a3.01 3.01 0 0 0 3 3h10a3.01 3.01 0 0 0 3-3v-9a2.006 2.006 0 0 0-2-2zm-5 7.73V18a1 1 0 0 1-2 0v-1.27a2 2 0 1 1 2 0zM16 9H8V7a4 4 0 1 1 8 0v2z"
          fill="currentColor"
        />
      </svg>
      <span
        class="circuit-1"
      >
        Aggregator
      </span>
    </button>
  </li>
</ul>
`;
